.provarCaches/00D5h000009Q6XQEA0/objects/provar__Repository__c.object
<CustomObject>
    <fields>
        <fullName>provar__Archived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>provar__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>provar__External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>provar__Platform__c</fullName>
        <label>Platform</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>provar__Git_Platforms</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>provar__Remote_URL_HTTPS__c</fullName>
        <label>Remote URL (HTTPS)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>provar__Remote_URL_SSH__c</fullName>
        <label>Remote URL (SSH)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>provar__Repository_Owner__c</fullName>
        <label>Repository Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>provar__Repository_URL__c</fullName>
        <label>Repository URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>provar__VCS__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>VCS</label>
        <referenceTo>provar__VCS__c</referenceTo>
        <relationshipLabel>Repositories</relationshipLabel>
        <relationshipName>Repositories</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>provar__Visibility__c</fullName>
        <label>Visibility</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Private</fullName>
                    <default>true</default>
                    <label>Private</label>
                </value>
                <value>
                    <fullName>Public</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Repository</label>
    <listViews>
        <fullName>provar__All</fullName>
        <columns>NAME</columns>
        <columns>provar__VCS__c</columns>
        <columns>provar__Platform__c</columns>
        <columns>provar__Visibility__c</columns>
        <columns>provar__Repository_URL__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Repository Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Repositories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>